# data_science_container

./: .gitignore  .gitmodules  Containerfile  pyproject.toml  readme.md
.claude/: settings.local.json
.config/starship/: init.sh
.config/zsh/: .zshrc
.devcontainer/: .containerignore  Containerfile  devcontainer.json  uv.toml
.devcontainer/.file/.config/mise/: config.toml  init.sh
.devcontainer/home/.config/uv/: init.sh
notebook/25.12.15/: llm_api.ipynb
notebook/26.01.05/: resnet_excercise.ipynb
notebook/classroom/: ESU202505_KNN_on_Iris.ipynb
notebook/exercise_1/: titanic_exercise.ipynb
notebook/exercise_2/: ESU_202505_Exercise_2_Airbnb_Homework_(With_Traps).ipynb  airbnb_dirty.csv  airbnb_exercise.ipynb
notebook/exercise_3/: derivatives_and_regression.ipynb
notebook/exercise_4/: knn_mnist.ipynb
notebook/exercise_5/: binary_classification_dynamics.ipynb
notebook/exercise_6/: fashion_mnist_mlp_classification.ipynb
notebook/exercise_7/: cnn_step_by_step.ipynb
notebook/exercise_8/: instructions.md  mnist_arab_letters.ipynb  mnista_dataset.py
notebook/exercise_9/: latent_assembly_clip_qdrant.ipynb
notebook/exercise_9/latent-assembly-clip-qdrant/: README.md
notebook/exercise_9/latent-assembly-clip-qdrant/dataset/: img_vecs.npy  meta.json  payloads.json
