[project]
name = "data-science"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=1.55.0",
    "huggingface-hub>=1.4.1",
    "ipykernel>=6.30.0",
    "kagglehub>=0.4.0",
    "langchain-google-genai>=4.0.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "pgeocode>=0.5.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchinfo>=1.8.0",
    "torchview>=0.2.7",
    "torchvision>=0.24.1",
    "transformers>=5.1.0",
]
[dependency-groups]
dev = ["nbstripout-fast>=1.1.1", "ruff>=0.14.8"]

[project.scripts]
nbstripout = "nbstripout_fast.cli:main"
lint = "ruff check ."
format = "ruff format ."
fix = "ruff check --fix . && ruff format ."

[tool.ruff]
target-version = "py314" # adjust to your minimum Python
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",  # pycodestyle
    "F",  # Pyflakes
    "I",  # isort
    "B",  # bugbear
    "UP", # pyupgrade
    "PL", # pylint (optional)
]
ignore = ["E501"] # optional: let black/ruff format handle line length instead

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
